# interpreter-rust

./: Cargo.toml  README.md  your_program.sh
.codecrafters/: run.sh
examples/: function.lox
libs/lox_macro/: Cargo.toml
libs/lox_macro/src/: lib.rs
src/: ast_printer.rs  environment.rs  error.rs  expr.rs  function.rs  interpreter.rs  lex.rs  lib.rs  main.rs  parser.rs  resolver.rs  stmt.rs
